# moondict

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  QWEN.md  README.md  nohup.out  pyproject.toml
.qwen/: QWEN.md  settings.json  settings.json.orig  system.md
.qwen/agents/: python-expert.md
.qwen/sdd/moondict-implementation/: proposal.md  tasks.md
.qwen/sdd_adapting_to_project/: Informe_de_Operación_Sincronizada_Ecosistema_Gentleman_AI_(Stark_Edition).md  Manual_de_Arquitectura_y_Configuración_Ecosistema_de_Desarrollo_Orquestado.md  Manual_de_Operaciones_Técnicas_Ecosistema_Stark_(Qwen_Code_+_Gentle_AI_+_GitNexus).md  Manual_de_Operaciones_Técnicas_Estrategia_de_Ejecución_y_Configuración_de_Prompts_(Stark_Ecosystem).md
.qwen/skills/_shared/: gitnexus-protocol.md  sdd-phase-common.md  skill-resolver.md
.qwen/skills/context7-cli/: SKILL.md
.qwen/skills/find-file/: SKILL.md
.qwen/skills/fish-skills/: AGENTS.md  README.md  SKILL.md
.qwen/skills/fish-skills/rules/: abbr-definition.md  anti-backtick.md  anti-subshell-group.md  anti-var-assign.md  cmdsub-newline-split.md  cmdsub-parentheses.md  cmdsub-quote-single.md  conf-conf-d.md  conf-config-fish.md  err-status-check.md  func-alias-wrapper.md  func-argv-args.md  func-autoload.md  func-definition.md  path-command.md  prompt-color.md  prompt-function.md  string-join.md  string-match.md  string-replace.md  string-split.md  syn-and-or-combiner.md  syn-begin-block.md  syn-if-test.md  var-argv-not-numbered.md  var-export-flag.md  var-lists-native.md  var-no-word-split.md  var-scope-explicit.md  var-set-syntax.md  var-status-not-question.md  wildcard-recursive.md
.qwen/skills/github-cli/: SKILL.md
.qwen/skills/github-cli/references/: api-patterns.md
.qwen/skills/gitnexus/: SKILLS.md
.qwen/skills/sdd-apply/: SKILL.md
.qwen/skills/sdd-archive/: SKILL.md
.qwen/skills/sdd-design/: SKILL.md
.qwen/skills/sdd-explore/: SKILL.md
.qwen/skills/sdd-init/: SKILL.md
.qwen/skills/sdd-onboard/: SKILL.md
.qwen/skills/sdd-propose/: SKILL.md
.qwen/skills/sdd-tasks/: SKILL.md
.qwen/skills/sdd-verify/: SKILL.md
.qwen/skills/searching-external-documentation/: SKILL.md
docs/: PRD.md  SPEC.md
models/: .gitkeep
scripts/: benchmark.py
src/moondict/: __init__.py  __main__.py  config.py  main.py  state.py
src/moondict/audio/: __init__.py  capture.py  feedback.py
src/moondict/engine/: __init__.py  interface.py  moonshine.py
src/moondict/injection/: __init__.py  xdotool.py
src/moondict/shortcuts/: __init__.py  keyboard.py
src/moondict/tray/: __init__.py  indicator.py
tests/: conftest.py  test_acceptance.py  test_capture.py  test_engine.py  test_feedback.py  test_injection.py  test_integration.py  test_keyboard.py  test_main.py  test_main_entry.py  test_state.py  test_tray.py
